Update mastodon URL

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -40,7 +40,7 @@ copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/license
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
    { linkedin = "https://linkedin.com/in/majorhayden" },
-   { mastodon = "https://fosstodon.org/@major" },
+   { mastodon = "https://social.lol/@major" },
   #   { medium = "https://medium.com/username" },
   #   { microsoft = "https://www.microsoft.com/" },
   #   { orcid = "https://orcid.org/userid" },
