--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Download s3deploy
         run: |
-          LATEST_HUGO_VERSION=$(grep s3deploy go.mod | awk '{print $NF}' | sed 's/^v//')
+          S3DEPLOY_VERSION=$(grep s3deploy go.mod | awk '{print $NF}' | sed 's/^v//')
           curl -sLO https://github.com/bep/s3deploy/releases/download/v${S3DEPLOY_VERSION}/s3deploy_${S3DEPLOY_VERSION}_linux-amd64.tar.gz
           tar -xzf s3deploy_${S3DEPLOY_VERSION}_linux-amd64.tar.gz s3deploy
           chmod +x s3deploy
