Enable git info

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,6 +6,8 @@ baseURL = "https://major.io/"
 defaultContentLanguage = "en"
 theme = "congo"
 
+enableGitInfo = true
+
 enableRobotsTXT = true
 paginate = 50
 summaryLength = 0
