--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -7,19 +7,19 @@ title = "Major Hayden"
 copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/licenses/by-sa/4.0/) 💜"
 
 [params]
-  isoCode = "en"
-  displayName = "EN"
-  rtl = false
-  dateFormat = "2 January 2006"
-  description = "A social nerd writing about everything 🤓"
+isoCode = "en"
+displayName = "EN"
+rtl = false
+dateFormat = "2 January 2006"
+description = "A social nerd writing about everything 🤓"
 
-[author]
-  name = "Major Hayden"
-  image = "major_avatar.png"
-  headline = "A social nerd writing about everything 🤓"
-  bio = "I love sharing what I've learned with others and I hope you find something here that's useful."
-  links = [
-    { email = "mailto:major@mhtx.net" },
+[params.author]
+name = "Major Hayden"
+image = "major_avatar.png"
+headline = "A social nerd writing about everything 🤓"
+bio = "I love sharing what I've learned with others and I hope you find something here that's useful."
+links = [
+  { email = "mailto:major@mhtx.net" },
   #   { link = "https://link-to-some-website.com/" },
   #   { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
   #   { apple = "https://www.apple.com" },
@@ -31,16 +31,16 @@ copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/license
   #   { facebook = "https://facebook.com/username" },
   #   { flickr = "https://www.flickr.com/photos/username/" },
   #   { foursquare = "https://foursquare.com/username" },
-   { github = "https://github.com/major" },
-   { gitlab = "https://gitlab.com/majorhayden" },
+  { github = "https://github.com/major" },
+  { gitlab = "https://gitlab.com/majorhayden" },
   #   { google = "https://www.google.com/" },
   #   { hashnode = "https://username.hashnode.dev" },
   #   { instagram = "https://instagram.com/username" },
   #   { keybase = "https://keybase.io/username" },
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
-   { linkedin = "https://linkedin.com/in/majorhayden" },
-   { mastodon = "https://social.lol/@major" },
+  { linkedin = "https://linkedin.com/in/majorhayden" },
+  { mastodon = "https://social.lol/@major" },
   #   { medium = "https://medium.com/username" },
   #   { microsoft = "https://www.microsoft.com/" },
   #   { orcid = "https://orcid.org/userid" },
@@ -53,11 +53,11 @@ copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/license
   #   { soundcloud = "https://soundcloud.com/username" },
   #   { stack-overflow = "https://stackoverflow.com/users/userid/username" },
   #   { steam = "https://steamcommunity.com/profiles/userid" },
-   { telegram = "https://t.me/majorhayden" },
+  { telegram = "https://t.me/majorhayden" },
   #   { tiktok = "https://tiktok.com/@username" },
   #   { tumblr = "https://username.tumblr.com" },
   #   { twitch = "https://twitch.tv/username" },
   #   { twitter = "https://twitter.com/majorhayden" },
   #   { whatsapp = "https://wa.me/phone-number" },
   #   { youtube = "https://youtube.com/username" },
-  ]
+]
