Remove tags from links list

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,26 +11,26 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Posts"
-  pageRef = "posts"
-  weight = 10
+name = "Posts"
+pageRef = "posts"
+weight = 10
+
+# [[main]]
+#   name = "Tags"
+#   pageRef = "tags"
+#   weight = 20
 
 [[main]]
-  name = "Tags"
-  pageRef = "tags"
-  weight = 20
+name = "CV"
+pageRef = "cv"
+weight = 40
 
 [[main]]
-  name = "CV"
-  pageRef = "cv"
-  weight = 40
-
-[[main]]
-  identifier = "appearance"
-  weight = 99
-  [main.params]
-    action = "appearance"
-    # icon = "appearance"
+identifier = "appearance"
+weight = 99
+[main.params]
+action = "appearance"
+# icon = "appearance"
 
 
 # -- Footer Menu --
