--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -4,7 +4,7 @@ weight = 1
 
 title = "Major Hayden"
 # logo = "/images/major_twitter_avatar.jpg"
-copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/licenses/by-sa/4.0/) 💜"
+copyright = "All content licensed [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) 💜"
 
 [params]
 isoCode = "en"
