--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,68 +6,79 @@
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
 colorScheme = "fire"
-defaultAppearance = "dark" # valid options: light or dark
+defaultAppearance = "dark"  # valid options: light or dark
 autoSwitchAppearance = true
 
 enableSearch = true
 enableCodeCopy = true
 enableImageLazyLoading = true
+# Breaks GIFs if true!
+enableImageWebp = false
+enableQuicklink = true
 
 # robots = ""
 fingerprintAlgorithm = "sha256"
 
 [header]
-  layout = "hybrid" # valid options: basic, hamburger, custom
-  logo = "major-hayden-high-resolution-logo-white-on-transparent-background.png"
-  logoDark = "major-hayden-high-resolution-logo-black-on-transparent-background.png"
-  showTitle = false
+layout = "hybrid"
+logo = "major-hayden-high-resolution-logo-white-on-transparent-background.png"
+logoDark = "major-hayden-high-resolution-logo-black-on-transparent-background.png"
+showTitle = false
 
 [footer]
-  showCopyright = true
-  showThemeAttribution = true
-  showAppearanceSwitcher = true
-  showScrollToTop = true
+showCopyright = true
+showThemeAttribution = true
+showAppearanceSwitcher = true
+showScrollToTop = true
 
 [homepage]
-  layout = "profile" # valid options: page, profile, custom
-  showRecent = true
-  recentLimit = 5
+layout = "profile" # valid options: page, profile, custom
+showRecent = true
+recentLimit = 5
 
 [article]
-  showDate = true
-  showDateUpdated = true
-  showAuthor = true
-  showBreadcrumbs = true
-  showDraftLabel = true
-  showEdit = true
-  editURL = "https://github.com/major/major.io/blob/main/content/"
-  editAppendPath = true
-  showHeadingAnchors = true
-  showPagination = true
-  invertPagination = false
-  showReadingTime = true
-  showTableOfContents = true
-  showTaxonomies = true
-  showWordCount = true
-  showComments = false
-  sharingLinks = ["mastodon", "email", "reddit", "facebook", "twitter", "pinterest", "linkedin"]
+showDate = true
+showDateUpdated = true
+showAuthor = true
+showBreadcrumbs = true
+showDraftLabel = true
+showEdit = true
+editURL = "https://github.com/major/major.io/blob/main/content/"
+editAppendPath = true
+showHeadingAnchors = true
+showPagination = true
+invertPagination = false
+showReadingTime = true
+showTableOfContents = true
+showTaxonomies = true
+showWordCount = true
+showComments = false
+sharingLinks = [
+  "mastodon",
+  "email",
+  "reddit",
+  "facebook",
+  "twitter",
+  "pinterest",
+  "linkedin",
+]
 
 [list]
-  showBreadcrumbs = true
-  showSummary = true
-  showTableOfContents = true
-  showTaxonomies = false
-  groupByYear = true
-  paginationWidth = 1
+showBreadcrumbs = true
+showSummary = true
+showTableOfContents = true
+showTaxonomies = false
+groupByYear = true
+paginationWidth = 1
 
 [sitemap]
-  excludedKinds = ["taxonomy", "term"]
+excludedKinds = ["taxonomy", "term"]
 
 [taxonomy]
-  showTermCount = true
+showTermCount = true
 
 [verification]
-  # google = ""
-  # bing = ""
-  # pinterest = ""
-  # yandex = ""
+# google = ""
+# bing = ""
+# pinterest = ""
+# yandex = ""
