Disable sharing posts

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -53,11 +53,7 @@ showTableOfContents = true
 showTaxonomies = true
 showWordCount = true
 showComments = false
-sharingLinks = [
-  "mastodon",
-  "email",
-  "linkedin",
-]
+sharingLinks = []
 
 [list]
 showBreadcrumbs = true
