--- a/.github/workflows/bunnycdn.yml
+++ b/.github/workflows/bunnycdn.yml
@@ -1,8 +1,8 @@
 name: Deploy to BunnyCDN
 
 on:
-  push:
-    branches: ["main"]
+  # push:
+  #   branches: ["main"]
   workflow_dispatch:
 
 concurrency:
