--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -1,8 +1,8 @@
 name: Deploy to AWS S3/CloudFront
 
 on:
-  # push:
-  #   branches: ["main"]
+  push:
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
