--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,10 +1,11 @@
 name: Build blog in container
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
