Bring over common renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,14 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "git-submodules": {
-    "enabled": true
-  },
-  "automerge": true,
-  "automergeType": "pr",
-  "platformAutomerge": true
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": ["config:recommended", ":automergeAll", "config:best-practices"],
+    "platformAutomerge": true,
+    "git-submodules": {
+        "enabled": true
+    },
+    "packageRules": [
+        {
+            "matchManagers": ["github-actions"],
+            "automerge": true
+        }
+    ]
 }
