--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -56,7 +56,9 @@ jobs:
       - name: Download s3deploy
         run: |
           export S3DEPLOY_VERSION=2.12.1
+          export S3DEPLOY_CHECKSUM=069084aef02cd3e532edec82fc24595adaacf5479b1674de764a03ff2d8d332e
           curl -sLO https://github.com/bep/s3deploy/releases/download/v${S3DEPLOY_VERSION}/s3deploy_${S3DEPLOY_VERSION}_linux-amd64.tar.gz
+          echo "${S3DEPLOY_CHECKSUM}  s3deploy_${S3DEPLOY_VERSION}_linux-amd64.tar.gz" | sha256sum -c -
           tar -xzf s3deploy_${S3DEPLOY_VERSION}_linux-amd64.tar.gz s3deploy
           chmod +x s3deploy
 
