Improve s3deploy config

--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Deploy to S3 using s3deploy
         run: |
-          ./s3deploy \
+          ./s3deploy -v \
             --acl public-read \
             --region us-east-1 \
             --bucket major.io \
