More tag cleanup; use common case

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,10 +15,10 @@ name = "Posts"
 pageRef = "posts"
 weight = 10
 
-# [[main]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 20
+[[main]]
+name = "Tags"
+pageRef = "tags"
+weight = 20
 
 [[main]]
 name = "CV"
