Add hyprland dpms post

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+  schedule:
+    - cron: '0 11 * * *'  # Daily at 6:00 AM EST (11:00 UTC)
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
