--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -41,7 +41,7 @@ links = [
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
   { linkedin = "https://linkedin.com/in/majorhayden" },
-  { mastodon = "https://tootloop.com/@major" },
+  # { mastodon = "https://tootloop.com/@major" },
   #   { medium = "https://medium.com/username" },
   #   { microsoft = "https://www.microsoft.com/" },
   #   { orcid = "https://orcid.org/userid" },
