Fix hugo deprecation

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ summaryLength = 0
 pagerSize = 50
 
 [permalinks]
-posts = "/p/:filename/"
+posts = "/p/:contentbasename/"
 
 [outputs]
 home = ["HTML", "RSS", "JSON"]
